# data_platform_in_a_box

./: README.md
data_platform/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data_platform/analysis/: air_quality_analysis_nb.py  data_fetch_interval_analysis_nb.py  test_analysis_nb.py
data_platform/data/: station_detector_matches.json
data_platform/data/maps/: detectors.html  merged_map.html  monitoring_stations.html
data_platform/data/monitoring_stations_data/: monitoring_stations.json
data_platform/data/parquet_files/: aq_data_2025.parquet  aq_data_sep25.parquet
data_platform/src/data_platform/: definitions.py
data_platform/src/data_platform/defs/: assets.py  fetch_data.py  jobs.py  resources.py  schedules.py
data_platform/src/data_platform/defs/io_managers/: azure_duckdb_io_manager.py
data_platform/terraform/: main.tf  outputs.tf  variables.tf
data_platform/transformations/: README.md  dbt_project.yml  profiles.yml
data_platform/transformations/models/example/: air_quality_data_2025-09-25.sql  air_quality_data_2025.sql  schema.yml  sources.yml  test_model.sql  test_model_data_fetching_analysis.sql  traffic_flow_data_2025-09-25.sql
