[project]
name = "data_platform"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "adlfs>=2025.8.0",
    "arrow>=1.3.0",
    "azure-storage-blob>=12.26.0",
    "dagster==1.11.10",
    "dagster-dbt>=0.27.10",
    "dagster-duckdb>=0.27.10",
    "dagster-webserver>=1.11.10",
    "dbt-duckdb>=1.9.6",
    "dlt[duckdb]>=1.12.1",
    "duckdb>=1.4.0",
    "filelock>=3.19.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "marimo>=0.16.1",
    "numpy>=2.0.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_platform"
registry_modules = [
    "data_platform.components.*",
]

